[package]
name = "lavish"
version = "0.4.0"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2018"
description = "RPC runtime for Lavish"
repository = "https://github.com/lavish-lang/lavish-rs"
readme = "README.md"
license = "MIT"

keywords = ["rpc", "msgpack", "ipc", "lavish"]
categories = ["network-programming", "encoding"]

[badges]
travis-ci = { repository = "lavish-lang/lavish-rs" }
maintenance = { status = "experimental" }

[dependencies]
rmp = "0.8.7"
bytes = "0.4.12"
chrono = { version = "0.4.6" }
log = "0.4.6"
num-traits = "0.2.8"
byteorder = "1.3.2"

[dev-dependencies]
netbuf = "0.4.1"
